# SPSCring

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  spsc_ring.c
app/: CMakeLists.txt
app/include/: spsc_ring.h
app/src/: spsc_ring.c
tests/: CMakeLists.txt
tests/unit/: unit_tests.c
utils/: build.sh  build_libs.sh  build_tests.sh  gen_coverage.sh  run_tests.sh
